trust-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trusted-api
  annotations:
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind":"ImageStreamTag",
            "name":"trusted-api:latest"
          },
          "fieldPath":"spec.template.spec.containers[?(@.name==\"service\")].image"
        }
      ]
  labels:
    app.kubernetes.io/name: trusted-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: trusted
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trusted-api
      app.kubernetes.io/component: backend
      app.kubernetes.io/part-of: trusted
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trusted-api
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: trusted
    spec:
      containers:
        - image: trusted-api:latest
          imagePullPolicy: Always
          name: service
          command: ["/trust-api"]
          args: ["run", "-p", "8080", "-g", "http://guac:8080/query"]
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /openapi.json
              port: 8080
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /openapi.json
              port: 8080
            initialDelaySeconds: 10
