trust-api/040-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: trusted-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: trusted
  name: trusted-api
spec:
  ports:
  - name: endpoint
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: trusted-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: trusted
  type: ClusterIP
