trust-api/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: trusted-api
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: trusted
  name: api
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: endpoint
  to:
    kind: Service
    name: trusted-api
    weight: 100
  wildcardPolicy: None
